--- a/styles/traway.css
+++ b/styles/traway.css
@@ -716,9 +716,7 @@ height: 5.9375rem;
     margin-bottom: 0;
   }
   #companyName--traway {
-    font-family: "Satisfy", cursive;
-    color: white;
-    font-size: 2.5rem;
+    margin-top: 20px;
   }
   /* trying SVG animation  */
   #SettingSun {
