--- a/styles/traway.css
+++ b/styles/traway.css
@@ -647,18 +647,29 @@ It's too black...  */
 /* FOOTER */
 /* FOOTER */
 
+/* section for social handels links */
+.socials {
+  display: flex;
+  gap: 21.44px;
+  margin-left: 4px;
+}
 .master-footer {
   background: linear-gradient(82.31deg, #000000 -2.55%, #1a1a1a 91.76%);
   margin-top: 15rem;
   padding-top: 50px;
 }
 .companyName {
+  display: flex;
+  flex-direction: column;
   text-align: center;
 }
 .companyName--backed {
-  color: #2a70fa;
-  font-weight: 500;
-  margin-bottom: 0;
+  color: #545454;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: left;
 }
 .svgAnime p {
   text-align: center;
@@ -667,6 +678,8 @@ It's too black...  */
 
 #companyName--traway {
   margin-top: 1.375rem;
+  width: 111px;
+  height: 58px;
 }
 /* trying SVG animation  */
 #SettingSun {
@@ -777,13 +790,17 @@ svg:hover #SettingSun {
 .footer--links {
   text-decoration: none;
   position: relative;
-  color: rgb(174, 174, 174);
+  color: #9a9a9a;
   padding: 0;
   margin-bottom: 1rem;
 }
 
 .footer--links:hover {
   color: white;
+}
+#address--traway {
+  width: 41%;
+  line-gap-override: 3px;
 }
 
 @media (max-width: 42rem) {
@@ -810,7 +827,6 @@ svg:hover #SettingSun {
 @media (min-width: 42rem) {
   .companyName {
     text-align: center;
-    width: 8.875rem;
     margin-left: 4.375rem;
   }
 }
